# yandex_taxi_bot

./: .env.example  .gitignore  Makefile  README.md  TZ.txt  alembic.ini  config.py  main.py  pyproject.toml  tatus
bot/filters/: __init__.py  checker.py
bot/handlers/: __init__.py  admin.py  commands.py  driver.py  driver_info.py  main.py  main_handler.py  register.py  user.py
bot/handlers/admin/: __init__.py  base.py  car_type.py
bot/handlers/driver/: __init__.py  base.py  driver_info.py
bot/keyboard/: __init__.py  admin.py  inline.py  reply.py
bot/middlewares/: __init__.py  registration.py
bot/states/: register.py  user.py
bot/utils/: coordinate.py  services.py  states.py
database/: __init__.py  base.py
database/models/: __init__.py  car_type.py  drivers.py  orders.py  users.py
db/: __init__.py  base.py  models.py
migrations/: env.py
utils/: face_detect.py  filters.py  services.py
