[project]
name = "yandex-taxi-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "opencv-python>=4.12.0.88",
    "pytz>=2025.2",
    "sqlalchemy[asyncio]>=2.0.43",
]
